# perceptron

./: CMakeLists.txt  Loader.hpp  NeuralNet.hpp  Teacher.hpp  config.yaml  inputs.txt  main.cpp  outputs.txt  tester.cpp
